fix dropdown menu z-index

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -10,7 +10,7 @@
     position: absolute;
     top: 0;
     bottom: 0;
-    z-index: -10;
+    z-index: 1010;
     visibility: hidden;
   }
 }
